<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instructions_header"
            style="@style/HeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_header" />

        <TextView
            android:id="@+id/instructions_message"
            style="@style/SubHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_body"
            android:text="@string/instructions_message" />

        <Button
            android:id="@+id/view_listings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_body"
            android:onClick="@{() -> viewModel.onNextScreen()}"
            android:text="@string/instructions_next_label" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/instructions_shoe_image_content_description"
            android:src="@drawable/ic_shoe" />

    </LinearLayout>

</layout>