<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_header"
            android:textAppearance="@style/HeaderText" />

        <TextView
            android:id="@+id/welcome_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="@dimen/padding_body"
            android:text="@string/welcome_message"
            android:textAppearance="@style/BodyText" />

        <Button
            android:id="@+id/learn_more_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_body"
            android:onClick="@{() -> viewModel.onNextScreen()}"
            android:text="@string/welcome_next_label" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_shoe"
            android:contentDescription="@string/welcome_shoe_image_content_description" />

    </LinearLayout>

</layout>